--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <input type="text" name="loseamount" value="5" />
         </div>
         <div class="control">
-          <label for="betspertrial">Number of Bets per Trial</label>
+          <label for="betspertrial">Bets per Trial</label>
           <input type="text" name="betspertrial" value="10" />
         </div>
         <div class="control">
