--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="border"></div>
-    <h1 class="title">Invex CoinFlip App</h1>
+    <h1 class="title">CoinFlip App</h1>
     <div class="chart"><canvas id="myChart"></canvas></div>
     <div class="controls">
       <div class="fieldwrapper">
