--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CoinFlip App</title>
+    <title>Coin Flip Simulator</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Nunito"
@@ -13,34 +13,47 @@
     -->
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/boost.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
   </head>
   <body>
     <div class="border"></div>
-    <h1 class="title">CoinFlip App</h1>
+    <h1 class="title">Coin Flip Simulator</h1>
     <div id="graph"></div>
     <!-- <div class="chart"><canvas id="graph"></canvas></div> -->
     <div class="controls">
       <div class="fieldwrapper">
         <div class="control">
+          <label for="winamount">Capital</label>
+          <input type="number" step="1" name="capital" value="100" />
+        </div>
+        <div class="control">
+          <label for="loseamount">Bet Percentage</label>
+          <input type="number" step="0.10" name="bet_percentage" value="0.1" />
+        </div>
+        <div class="control">
+          <label for="is_compounding">Compounding Interest</label>
+          <input
+            type="checkbox"
+            class="checkbox"
+            name="is_compounding"
+            id="is_compounding"
+          />
+        </div>
+        <div class="control">
           <label for="winrate">Win Rate</label>
-          <input type="number" step="0.10" name="winamount" value="0.50" />
-        </div>
-        <div class="control">
-          <label for="winamount">Win Amount</label>
-          <input type="number" step="0.50" name="winamount" value="5" />
-        </div>
-        <div class="control">
-          <label for="loseamount">Lose Amount</label>
-          <input type="number" step="0.50" name="loseamount" value="5" />
+          <input type="number" step="0.10" name="win_rate" value="0.50" />
         </div>
         <div class="control">
           <label for="betspertrial">Bets per Trial</label>
-          <input type="number" step="50" name="betspertrial" value="10" />
+          <input type="number" step="50" name="bets_per_trial" value="100" />
         </div>
         <div class="control">
           <label for="trial">Number of Trials</label>
-          <input type="number" step="100" name="trial" value="100" />
+          <input
+            type="number"
+            step="100"
+            name="number_of_trials"
+            value="1000"
+          />
         </div>
       </div>
       <button type="submit" class="graph-button">Graph</button>
